<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.add.AddFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >




    <ImageButton
        android:id="@+id/imgAdd"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inset"
        android:elevation="6dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_image"
        android:stateListAnimator="@null"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAdd">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naimenovanie_tovara" />
        <EditText
            android:id="@+id/edit"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/inset"
            android:hint="@string/vpishite_nazvanie_tovara" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sena_tovara" />

        <EditText
            android:id="@+id/edit2"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/inset"
            android:hint="@string/vpishite_senu_tovara" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liner2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proizvodit_tovara" />

        <EditText
            android:id="@+id/edit3"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/inset"
            android:hint="@string/nazvanie_proizvodit_tovara" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liner3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colichestvo_tovara" />

        <EditText
            android:id="@+id/edit4"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/inset"
            android:hint="@string/colichestvo_tovara"
             />


    </LinearLayout>


       <Button
           android:textAllCaps="false"
           android:text="Отмена"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
           android:layout_marginTop="20dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/liner4"/>
        <Button
            android:id="@+id/add_btn"
            android:text="Добавить"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/liner4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>